js/js.translator/testData/incremental/invalidation/suspendInterfaceWithDefaultParams/lib2/l2A.0.kt
class ClassA2 : InterfaceA {
    override suspend fun functionA(x: Int, s: String, b: Boolean?): Int {
        return function1()
    }
}

